# secure-packages

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml
crates/sp-analysis/: Cargo.toml
crates/sp-analysis/src/: gemini.rs  lib.rs  orchestrator.rs
crates/sp-client/: Cargo.toml
crates/sp-client/src/: api.rs  main.rs  resolver.rs
crates/sp-client/src/commands/: check.rs  details.rs  mod.rs
crates/sp-client/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/sp-client/src/tui/views/: detail.rs  mod.rs  package_list.rs
crates/sp-core/: Cargo.toml
crates/sp-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/sp-db/: Cargo.toml
crates/sp-db/src/: lib.rs  models.rs
crates/sp-db/src/repos/: analysis.rs  audit.rs  mod.rs  package.rs  version.rs
crates/sp-db/tests/: repos.rs
crates/sp-registry-pypi/: Cargo.toml
crates/sp-registry-pypi/src/: client.rs  lib.rs  normalize.rs  source_cache.rs
crates/sp-server/: Cargo.toml
crates/sp-server/src/: cli.rs  config.rs  jobs.rs  main.rs  state.rs
crates/sp-server/src/routes/: api.rs  health.rs  mod.rs
migrations/: 001_initial.sql
skills/pypi/diff-security-review/: SKILL.md
skills/pypi/security-audit/: SKILL.md
