[workspace]
resolver = "2"
members = [
    "crates/sp-core",
    "crates/sp-analysis",
    "crates/sp-db",
    "crates/sp-registry-pypi",
    "crates/sp-server",
    "crates/sp-client",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }

# Job queue
apalis = { version = "0.6", features = ["timeout", "limit", "tracing", "catch-panic"] }
apalis-sql = { version = "0.6", features = ["postgres"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTML parsing
scraper = "0.22"

# Python version parsing
pep440_rs = "0.7"

# Hashing
sha2 = "0.10"

# Archive extraction
flate2 = "1"
tar = "0.4"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Temp files
tempfile = "3"

# Bytes
bytes = "1"

# Internal crates
sp-core = { path = "crates/sp-core" }
sp-analysis = { path = "crates/sp-analysis" }
sp-db = { path = "crates/sp-db" }
sp-registry-pypi = { path = "crates/sp-registry-pypi" }
