[package]
name = "sp-analysis"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sp-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
