[package]
name = "sp-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "sp-client"
path = "src/main.rs"

[dependencies]
sp-core = { workspace = true }
sp-registry-pypi = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
