[package]
name = "sp-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sp-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
