[package]
name = "sp-registry-pypi"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sp-core = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
pep440_rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
