[package]
name = "sp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "secure-packages"
path = "src/main.rs"

[dependencies]
sp-core = { workspace = true }
sp-analysis = { workspace = true }
sp-db = { workspace = true }
sp-registry-pypi = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
apalis = { workspace = true }
apalis-core = "0.6"
apalis-sql = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
figment = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
